# Stara-Maze-Generator

./: .gitignore  README.md  pyproject.toml
stara_maze_generator/: cli.py  types.py  utils.py  visualization.py  vmaze.py
stara_maze_generator/pathfinder/: __init__.py  base.py
tests/: test_base.py  test_bfs.py  test_vmaze.py
