[tool.poetry]
name = "stara-maze-generator"
version = "0.1.0"
description = "Creating mazes using prims' algorithm for the stara project"
authors = ["Valerius Mattfeld <v.mattfeld@stud.uni-goettingen.de>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
